react to react-native. relative path in webpack output.publicPath

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
+    "react-art": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
+    "react-native": "^0.56.0",
+    "react-native-web": "^0.8.9",
     "react-scripts": "^1.1.4"
   },
   "scripts": {
@@ -19,6 +22,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-native": "^4.0.0",
     "css-loader": "^1.0.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.0",
