--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react-hot-loader": "^4.3.3",
     "react-native": "^0.56.0",
     "react-native-web": "^0.8.9",
-    "react-scripts": "^1.1.4"
+    "react-router-dom": "^4.3.1",
+    "react-router-native": "^4.3.0",
+    "react-scripts": "^1.1.4",
+    "thrift": "^0.11.0"
   },
   "scripts": {
     "start:dev": "node_modules/.bin/webpack-dev-server --mode development --host 0.0.0.0 --port 9000"
@@ -20,9 +23,14 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-native": "^4.0.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^1.0.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.0",
