--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.3.1",
+    "nidhogg-jquery": "^0.0.1",
     "react": "^16.4.1",
     "react-art": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -11,8 +13,7 @@
     "react-native-web": "^0.8.9",
     "react-router-dom": "^4.3.1",
     "react-router-native": "^4.3.0",
-    "react-scripts": "^1.1.4",
-    "thrift": "^0.11.0"
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start:dev": "node_modules/.bin/webpack-dev-server --mode development --host 0.0.0.0 --port 9000"
