--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "hybind": "^1.5.0",
     "jquery": "^3.3.1",
     "nidhogg-jquery": "^0.0.1",
     "react": "^16.4.1",
