docker build requires 1 arg

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ branches:
     - master
 
 script:
-  - docker build
+  - docker build .
 
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS https://index.docker.io/v1/
