--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
+language: node_js
 sudo: required
+node_js:
+  - "8"
 
 services:
   - docker
@@ -11,6 +14,9 @@ branches:
     - master
 
 script:
+  - npm set registry http://artifact.frank0631.com:4873
+  - npm install
+  - npm run build
   - docker build .
 
 after_success:
