--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,9 @@ before_install:
 script:
   - npm install
   - npm run build
-  - docker build .
+  - docker build -t ratatoskr .
 
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS https://index.docker.io/v1/
+  - docker tag ratatoskr $DOCKER_ID_USER/ratatoskr
+  - docker push $DOCKER_ID_USER/ratatoskr
